--- a/server/package.json
+++ b/server/package.json
@@ -1,27 +1,20 @@
 {
-  "name": "express-server",
+  "name": "server",
   "version": "1.0.0",
   "description": "express server for mern todo app",
   "main": "app.js",
   "scripts": {
     "start": "nodemon app_hooked.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/bipinswarnkar1989/mern_stack_tutorial_todo_app.git"
-  },
+ 
   "keywords": [
     "express",
     "server",
     "todo",
     "app"
   ],
-  "author": "Bipin Swarnkar",
+  "author": "Ajay",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/bipinswarnkar1989/mern_stack_tutorial_todo_app/issues"
-  },
-  "homepage": "https://github.com/bipinswarnkar1989/mern_stack_tutorial_todo_app#readme",
   "dependencies": {
     "babel-preset-es2015-node6": "^0.4.0",
     "babel-register": "^6.26.0",
